<resources>
    <string name="app_name">Label++</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_login_way">社交账号登录</string>
    <string name="transName">transName</string>
</resources>
