<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="MissingPrefix"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.momo.imgrecognition.module.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:background="@drawable/bg_app_name"
            android:scaleType="fitCenter"
            android:layout_width="150dp"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:layout_toLeftOf="@id/iv_logo"
            android:layout_centerVertical="true"
            android:id="@+id/iv_pet"
            android:background="@drawable/login_password"/>

    </RelativeLayout>



    <com.momo.imgrecognition.customedview.ClearEditText
        android:id="@+id/et_username"
        android:hint="@string/username_hint"

        android:text="陌上疏影凉"

        style="@style/AppEditText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:drawableLeft="@drawable/ic_username"
        app:drawableLeftTint="@color/selector_focus"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_text_delete"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_logo"
        android:layout_alignParentStart="true"/>

    <com.momo.imgrecognition.customedview.ClearEditText
        android:id="@+id/et_password"
        android:hint="@string/password_hint"

        android:text="123456"

        style="@style/AppEditText"
        android:drawableLeft="@drawable/ic_password"
        app:drawableLeftTint="@color/selector_focus"
        android:drawableRight="@drawable/ic_text_delete"
        android:drawablePadding="10dp"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textPassword"

        android:layout_below="@id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_login"
        android:enabled="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/selector_button_login"
        android:textColor="@color/buttonTextColor"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/et_password"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:id="@+id/rl_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btn_login">

        <TextView
            android:id="@+id/tv_register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/register_account"
            android:textColor="@color/theme_color_primary"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/forget_password"
            android:textColor="@color/theme_color_primary"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_other_login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#aabbcc"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:text="@string/other_login_way"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="#aabbcc"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/tv_label"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="#aabbcc"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/tv_label"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@id/rl_hint"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_login_qq"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_login_wechat"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_login_weibo"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
